--- a/ssms/src/main/resources/templates/system/user.html
+++ b/ssms/src/main/resources/templates/system/user.html
@@ -23,6 +23,28 @@
 
             <div class="layui-form toolbar">
                 <div class="layui-form-item">
+                    <div class="layui-inline">
+                        <select id="collegeId" name="collegeId" lay-filter="collegeId">
+                            <option value="">请选择学院</option>
+                        </select>
+                    </div>
+                    <div id="subjectDiv" class="layui-inline" style="padding-left: 20px;display:none;">
+                        <select id="subjectId" name="subjectId" lay-filter="subjectId">
+                            <option value="">请选择专业</option>
+                        </select>
+                    </div>
+                    <div id="classDiv" class="layui-inline" style="padding-left: 20px;display:none;">
+                        <select id="classId" name="classId" lay-filter="classId">
+                            <option value="">请选择班级</option>
+                        </select>
+                    </div>
+                    <div id="gradeDiv" class="layui-inline" style="padding-left: 20px;display:none">
+                        <select id="gradeId" name="gradeId" lay-filter="gradeId">
+                            <option value="">请选择年级</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-form-item">
                     <div class="layui-inline" style="width: 120px;">
                         <select id="sltKey">
                             <option value="">-搜索条件-</option>
@@ -39,7 +61,7 @@
                         <button id="btnSearch" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>搜索</button>
                         <button id="btnAdd" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i>添加</button>
                         <button id="btnExp" class="layui-btn icon-btn"><i class="layui-icon">&#xe67d;</i>导出</button>
-                        <button id="btnUploadTeacher" class="layui-btn icon-btn"><i class="layui-icon">&#xe67c;</i>导入教师</button>
+                        <button id="btnUploadTeacher" class="layui-btn icon-btn"  style="display: none;"><i class="layui-icon">&#xe67c;</i>导入教师</button>
                         <button id="btnUploadStudent" class="layui-btn icon-btn" style="margin-left: 10px"><i class="layui-icon">&#xe67c;</i>导入学生</button>
                     </div>
                 </div>
@@ -69,12 +91,13 @@
 <script type="text/javascript" src="/assets/libs/layui/layui.js"></script>
 <script type="text/javascript" src="/assets/js/common.js"></script>
 <script>
-    layui.use(['layer', 'form', 'table', 'util', 'admin','element','upload'], function () {
+    layui.use(['layer', 'form', 'table', 'util', 'admin','element','upload','collegeSelect'], function () {
         var $ = layui.jquery;
         var layer = layui.layer;
         var form = layui.form;
         var table = layui.table;
         var util = layui.util;
+        var collegeSelect = layui.collegeSelect;
         var admin = layui.admin;
         var element = layui.element;
         var upload = layui.upload;
@@ -136,6 +159,103 @@
             }
         });
 
+
+        //加载学院下拉框
+        collegeSelect.renderCollegeList();
+
+        //教师登录回显
+        var collegeInfo = '${collegeInfo}';
+        if (collegeInfo != undefined && collegeInfo != '' && collegeInfo != '{}') {
+            var collegeId = '${collegeInfo.collegeId}';
+            var subjectId = '${collegeInfo.subjectId}';
+            $("#btnUploadTeacher").hide();
+            collegeSelect.reshowAll(collegeId, subjectId, null, null, null, null, true);
+        }else {
+            $("#btnUploadTeacher").show();
+        }
+
+        //选择学院触发事件
+        form.on('select(collegeId)', function (data) {
+            if ($("#collegeId option:selected").val() != "") {
+                $('#subjectDiv').show();
+                collegeSelect.renderSubjectList(data.value);
+            } else {
+                $('#subjectDiv').hide();
+                $('#subjectId').val('');
+            }
+            $('#classDiv').hide();
+            $('#gradeDiv').hide();
+            $('#classId').val('');
+            $('#gradeId').val('');
+            form.render('select')
+            searchUserList();
+        });
+
+        //选择专业触发事件
+        form.on('select(subjectId)', function (data) {
+            if ($("#subjectId option:selected").val() != "") {
+                collegeSelect.renderClassList(data.value);
+                $('#classDiv').show();
+            } else {
+                $('#classDiv').hide();
+                $('#classId').val('');
+            }
+            $('#gradeDiv').hide();
+            $('#gradeId').val('');
+            form.render('select')
+            searchUserList();
+        });
+        //选择班级触发事件
+        form.on('select(classId)', function (data) {
+            if (data.value != "") {
+                //加载年级下拉框
+                collegeSelect.renderGradeList();
+                $('#gradeDiv').show();
+            } else {
+                $('#gradeId').val('');
+                $('#gradeDiv').hide();
+            }
+            form.render('select')
+            searchUserList();
+        });
+        //选择年级触发事件
+        form.on('select(gradeId)', function (data) {
+            if (data.value != "") {
+                var gradeName = $("#gradeId option:selected").text();
+                if (gradeName != "" && gradeName != undefined) {
+                    collegeSelect.renderSchoolYearList(gradeName);
+                    $('#schoolYearDiv').show();
+                }
+            } else {
+                $('#schoolYearId').val('');
+                $('#schoolYearDiv').hide();
+            }
+            $('#semesterId').val('');
+            $('#semesterDiv').hide();
+            form.render('select')
+            searchUserList();
+        });
+
+        //根据条件获取成绩列表
+        function searchUserList() {
+            var collegeId = $('#collegeId option:selected').val();
+            var subjectId = $('#subjectId option:selected').val();
+            var classId = $('#classId option:selected').val();
+            var gradeId = $('#gradeId option:selected').val();
+            var key = $('#sltKey').val();
+            var value = $('#edtSearch').val();
+            table.reload('userTable', {
+                where: {
+                    collegeId: collegeId,
+                    subjectId: subjectId,
+                    classId: classId,
+                    gradeId: gradeId,
+                    searchKey: key,
+                    searchValue: value
+                }
+            });
+        }
+
         // 添加按钮点击事件
         $('#btnAdd').click(function () {
             showEditModel();
@@ -143,9 +263,7 @@
 
         // 搜索按钮点击事件
         $('#btnSearch').click(function () {
-            var key = $('#sltKey').val();
-            var value = $('#edtSearch').val();
-            table.reload('userTable', {where: {searchKey: key, searchValue: value}});
+            searchUserList();
         });
 
         // 工具条点击事件
