--- a/ssms/src/main/resources/templates/system/college.html
+++ b/ssms/src/main/resources/templates/system/college.html
@@ -35,9 +35,11 @@
                         <button id="btnSearch" class="layui-btn icon-btn">
                             <i class="layui-icon">&#xe615;</i>搜索
                         </button>
-                        <button id="btnAdd" class="layui-btn icon-btn">
-                            <i class="layui-icon">&#xe654;</i>添加
-                        </button>
+                        <% if(personType == 1){ %>
+                            <button id="btnAdd" class="layui-btn icon-btn">
+                                <i class="layui-icon">&#xe654;</i>添加
+                            </button>
+                        <% } %>
                     </div>
                 </div>
             </div>
@@ -51,8 +53,12 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableBar">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    <% if(personType == 1){ %>
+        <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    <% }else{ %>
+        无
+    <% } %>
 </script>
 
 <!-- js部分 -->
@@ -112,6 +118,7 @@
                                     },
                                     title: '类型'
                                 }, {
+                                    field:'operator',
                                     templet: '#tableBar',
                                     width: 200,
                                     align: 'center',
